@startuml

title __WINDOW's Class Diagram__\n

  namespace ro.uaic.info.engine {
    namespace window {
      class ro.uaic.info.engine.window.GameWindow {
          {static} + DEFAULT_GAME_WINDOW_HEIGHT : int
          {static} + DEFAULT_GAME_WINDOW_WIDTH : int
          {static} + DEFAULT_X_OFFSET : int
          {static} + DEFAULT_Y_OFFSET : int
          - canvas : Canvas
          - topLeftCorner : Point
          - windowSize : Dimension
          + getCanvas()
          + initialize()
          + run()
          - GameWindow()
          - buildComponents()
          - buildWindow()
      }
    }
  }
  

  namespace ro.uaic.info.engine {
    namespace window {
      class ro.uaic.info.engine.window.GameWindow.GameWindowBuilder {
          - drawMeshes : boolean
          - gameWindowDimension : Dimension
          - initEng : boolean
          - topLeftCorner : Point
          + build()
          + drawMeshes()
          + initializeEngine()
          + withDebugLevel()
          + withPosition()
          + withPosition()
          + withSize()
          + withSize()
      }
    }
  }
  

  ro.uaic.info.engine.window.GameWindow -up-|> javax.swing.JFrame
  ro.uaic.info.engine.window.GameWindow o-- ro.uaic.info.engine.Engine : engine
  ro.uaic.info.engine.window.GameWindow +-down- ro.uaic.info.engine.window.GameWindow.GameWindowBuilder
  ro.uaic.info.engine.window.GameWindow.GameWindowBuilder o-- ro.uaic.info.engine.Debug.DebugLevel : debugLevel


@enduml
